--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/main/java/frc4904/standard"]
 	path = src/main/java/frc4904/standard
 	url = https://github.com/RoboticsTeam4904/standard
+[submodule "src/main/java/org/usfirst/frc4904/standard"]
+	path = src/main/java/org/usfirst/frc4904/standard
+	url = https://github.com/RoboticsTeam4904/standard.git
